--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,20 @@
 @import 'reset';
+@import 'fonts';
 @import 'vars';
+
+body {
+    background-color: $bodyLightTheme;
+    font-family: --main-familia-font;
+}
+p {
+    color: $textColor;
+}
+.wrap {
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
 
 @import 'header';
