--- a/css/main.css
+++ b/css/main.css
@@ -352,6 +352,9 @@ body {
   background-repeat: repeat;
   font-family: --main-familia-font; }
 
+html {
+  scroll-behavior: smooth; }
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400; }
 
@@ -672,11 +675,72 @@ p {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("../resources/img/bg_advertising.png");
   background-repeat: repeat-y;
   background-size: 100% auto; }
+  .advertising-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Times New Roman", serif; }
+    .advertising-box h3 {
+      color: #fff;
+      margin: 0; }
+  .advertising_desc {
+    margin-left: 80px;
+    color: #fff; }
+    .advertising_desc--title {
+      font-size: 95px;
+      text-transform: uppercase; }
+    .advertising_desc--text {
+      font-size: 30px;
+      text-transform: uppercase; }
+    .advertising_desc--store {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start; }
+      .advertising_desc--store a {
+        display: block;
+        margin: 30px 30px 30px 0; }
 
 .footer {
-  background-image: url("../resources/img/bg_footer.png"); }
+  background-image: url("../resources/img/bg_footer.png");
+  position: relative; }
   .footer-top {
-    padding: 60px 0 30px; }
+    padding: 60px 0 30px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between; }
+    .footer-top h3 {
+      color: #fff; }
+    .footer-top--contacts {
+      text-align: center;
+      margin: 70px 0; }
+      .footer-top--contacts p {
+        color: #fff;
+        font-size: 15px;
+        max-width: 80%;
+        margin-bottom: 15px; }
+    .footer-top--forms input, .footer-top--forms textarea {
+      display: block;
+      width: 370px;
+      border: none;
+      border-radius: 5px;
+      background-color: #323232;
+      padding: 14px 25px;
+      margin-bottom: 11px;
+      resize: none;
+      color: #9a9a9a; }
+      .footer-top--forms input::placeholder, .footer-top--forms textarea::placeholder {
+        color: #9a9a9a;
+        font-size: 15px; }
+    .footer-top--schedule {
+      color: #fff;
+      text-align: center;
+      margin: 50px 0; }
+      .footer-top--schedule h6 {
+        font-size: 16px;
+        font-weight: 600;
+        margin-bottom: 15px; }
+      .footer-top--schedule p {
+        color: #fff; }
   .footer-botton {
     background-color: #0d0d0d;
     text-align: center;
@@ -684,5 +748,13 @@ p {
     .footer-botton p {
       font-size: 15px;
       color: #fff; }
+  .footer .bg_recipes4 {
+    position: absolute;
+    left: 0;
+    top: 10%; }
+  .footer .bg_recipes3 {
+    position: absolute;
+    right: 0;
+    top: 25%; }
 
 /*# sourceMappingURL=main.css.map */
