--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,9 @@ body {
     background-repeat: repeat;
     font-family: --main-familia-font;
 }
+html {
+    scroll-behavior: smooth;
+}
 h1,h2,h3,h4,h5,h6 {
     font-weight: 400;
 }
