--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -12,6 +12,12 @@
         &--item {
             text-align: center;
             width: 33%;
+
+        }
+        &--field {
+            h3 {
+                text-align: left;
+            }
         }
         &--contacts {
             text-align: center;
