--- a/css/main.css
+++ b/css/main.css
@@ -605,6 +605,8 @@ p {
         cursor: pointer; }
         .delightful-slider--item .dishes:hover > .dishes--hover {
           opacity: 1; }
+        .delightful-slider--item .dishes:focus > .dishes--hover {
+          opacity: 1; }
         .delightful-slider--item .dishes img {
           width: 100%;
           height: 100%;
@@ -760,6 +762,8 @@ p {
     .footer-top--item {
       text-align: center;
       width: 33%; }
+    .footer-top--field h3 {
+      text-align: left; }
     .footer-top--contacts {
       text-align: center;
       margin: 70px 0; }
@@ -808,6 +812,9 @@ p {
     top: 25%; }
 
 @media screen and (max-width: 1280px) {
+  #home {
+    background-size: auto 100%; }
+
   .slider-prew, .slider-next {
     display: none; }
 
@@ -857,6 +864,7 @@ p {
 
   .footer .clickHere-button {
     width: 100%;
+    max-width: 330px;
     text-align: center; } }
 @media screen and (max-width: 1040px) {
   :root {
@@ -917,6 +925,7 @@ p {
       margin: 30px 0; }
   .footer .clickHere-button {
     width: 60%;
+    max-width: 100%;
     margin: 0 auto; }
 
   .footer-top--forms input, .footer-top--forms textarea {
@@ -926,7 +935,10 @@ p {
 
   .recipes .bg_recipes2 {
     left: -46px;
-    transform: scale(0.5); } }
+    transform: scale(0.5); }
+
+  .footer-top--field h3 {
+    text-align: center; } }
 @media screen and (max-width: 960px) {
   :root {
     --main-font-size: 16px;
@@ -992,6 +1004,9 @@ p {
     .advertising_desc--title {
       font-size: 65px; } }
 @media screen and (max-width: 760px) {
+  :root {
+    --title-font-size-h4: 16px; }
+
   .info-logo img {
     max-width: 41%; }
 
@@ -1026,7 +1041,28 @@ p {
     display: none; }
 
   .footer-top--forms input, .footer-top--forms textarea, .footer .clickHere-button {
-    width: 90%; } }
+    width: 90%; }
+
+  .price-dish--menu_item--name p {
+    max-width: 190px;
+    text-overflow: clip;
+    overflow: hidden; }
+
+  .delightful-slider--item .dishes--hover {
+    padding: 0; }
+
+  .delightful-slider--item .dishes--hover-desc {
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; }
+    .delightful-slider--item .dishes--hover-desc .price {
+      font-size: 28px; }
+    .delightful-slider--item .dishes--hover-desc .clickHere-button {
+      margin: 10px auto 0; } }
 @media screen and (max-width: 540px) {
   :root {
     --main-font-size: 14px;
@@ -1073,6 +1109,9 @@ p {
     left: 0; }
 
   .price-dish {
-    padding: 30px 0 30px; } }
+    padding: 30px 0 30px; }
+
+  .price-dish--menu_item--name p {
+    font-size: 14px; } }
 
 /*# sourceMappingURL=main.css.map */
