--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,4 +1,7 @@
 @media screen and (max-width: 1280px) {
+    #home {
+        background-size: auto 100%;
+    }
     .slider-prew, .slider-next {
         display: none;
     }
@@ -70,6 +73,7 @@
     .footer {
         .clickHere-button {
             width: 100%;
+            max-width: 330px;
             text-align: center;
         }
     }
@@ -151,6 +155,7 @@
         }
         .clickHere-button {
             width: 60%;
+            max-width: 100%;
             margin: 0 auto;
         }
     } 
@@ -162,6 +167,11 @@
     .recipes .bg_recipes2 {
         left: -46px;
         transform: scale(0.5);
+    }
+    .footer-top--field {
+        h3 {
+            text-align: center;
+        }
     }
 
 }
@@ -250,6 +260,9 @@
 }
 
 @media screen and (max-width: 760px) {
+    :root {
+        --title-font-size-h4: 16px;
+    }
     .info-logo img {
         max-width: 41%;
     }
@@ -293,7 +306,30 @@
     .footer-top--forms input, .footer-top--forms textarea, .footer .clickHere-button {
         width: 90%;
     }
+    .price-dish--menu_item--name p {
+        max-width: 190px;
+        text-overflow: clip;
+        overflow: hidden;
+    }
+    .delightful-slider--item .dishes--hover {
+        padding: 0;
+    }
+    .delightful-slider--item .dishes--hover-desc {
+        padding: 10px;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .price {
+            font-size: 28px;
+        }
+        .clickHere-button {
+            margin: 10px auto 0;
+        }
 
+    }
 
     
 }
@@ -346,6 +382,9 @@
     }
     .price-dish {
         padding: 30px 0 30px;
+    }
+    .price-dish--menu_item--name p {
+        font-size: 14px;
     }
     
 }
